--- a/app/pug/layouts/_popup.pug
+++ b/app/pug/layouts/_popup.pug
@@ -17,4 +17,99 @@
 		//- 			footer.modal__footer
 		//- 				button.modal__btn.modal__btn-primary Continue
 		//- 				button.modal__btn(data-micromodal-close='' aria-label='Close this dialog window') Close
-		
+		#country-popup.sidebar-popup
+			form
+				.input-group
+					input(type="checkbox" id="AT-chbx")
+					label(for="AT-chbx")
+						|Австрия
+				.input-group
+					input(type="checkbox" id='DE-chbx')
+					label(for="DE-chbx")
+						|Германия
+				.input-group
+					input(type="checkbox" id='DK-chbx')
+					label(for="DK-chbx")
+						|Дания
+				.input-group
+					input(type="checkbox" id='NO-chbx')
+					label(for="NO-chbx")
+						|Норвегия
+				.input-group
+					input(type="checkbox" id='FI-chbx')
+					label(for="FI-chbx")
+						|Финляндия
+				.input-group
+					input(type="checkbox" id='SE-chbx')
+					label(for="SE-chbx")
+						|Швеция
+		#type-manufactury-popup.sidebar-popup
+			form
+				.form-layer
+					.input-group
+						input(type="checkbox" id="flowers-chbx")
+						label(for="flowers-chbx")
+							|цветы
+					.input-group
+						input(type="checkbox" id="vegetables-chbx")
+						label(for="vegetables-chbx")
+							|овощи
+					.input-group
+						input(type="checkbox" id="cows-chbx")
+						label(for="cows-chbx")
+							|коровы
+					.input-group
+						input(type="checkbox" id="pigs-chbx")
+						label(for="pigs-chbx")
+							|свиньи
+					.input-group
+						input(type="checkbox" id="fields-chbx")
+						label(for="fields-chbx")
+							|поля
+				.form-layer
+					.input-group
+						input(type="checkbox" id="berries-chbx")
+						label(for="berries-chbx")
+							|ягоды
+					.input-group
+						input(type="checkbox" id="greenhouses-chbx")
+						label(for="greenhouses-chbx")
+							|теплицы
+					.input-group
+						input(type="checkbox" id="wood-chbx")
+						label(for="wood-chbx")
+							|лес
+					.input-group
+						input(type="checkbox" id="landscape-chbx")
+						label(for="landscape-chbx")
+							|ландшафт
+					.input-group
+						input(type="checkbox" id="horses-chbx")
+						label(for="horses-chbx")
+							|лошади
+		#contact-popup.sidebar-popup
+			form
+				.input-group
+					input(type="checkbox" id="phone-chbx")
+					label(for="phone-chbx")
+						|Телефон
+				.input-group
+					input(type="checkbox" id="email-chbx")
+					label(for="email-chbx")
+						|E-mail
+				.input-group
+					input(type="checkbox" id="mail-address-chbx") 
+					label(for="mail-address-chbx")
+						|Почтовый адрес
+				.input-group
+					input(type="checkbox" id="site-chbx")
+					label(for="site-chbx")
+						|Сайт
+				.input-group
+					input(type="checkbox" id="facebook-chbx")
+					label(for="facebook-chbx")
+						|Facebook
+				.input-group
+					input(type="checkbox" id="instagram-chbx")
+					label(for="instagram-chbx")
+						|Instagram
