--- a/app/less/main.less
+++ b/app/less/main.less
@@ -93,6 +93,74 @@ input {
 }
 
 
+
+//??????????????????
+
+input[type="checkbox"], input[type="radio"]{
+    display: none;
+}
+
+input[type="checkbox"] + label {
+  display: flex;
+  padding: 5px;
+  white-space: nowrap;    
+}
+input[type="checkbox"] + label:before{
+    content: "\2714";
+    color: @white;
+    background-color: @white;
+    display: inline-block;
+    border: none;
+    border-radius: 3px;
+    margin: 0 10px 0 0;
+    height: 12px;
+    width: 12px;
+    line-height: 1.3;
+    text-align: center;
+    /*vertical-align: baseline;*/
+    font-size: 8pt;
+    /*margin-bottom: -5px;*/
+    transition: color 0.1s ease 0s;
+}
+input[type="radio"] + label:before{
+    content: "\2714";
+    color: @white;
+    background-color: @white;
+    display: inline-block;
+    border: none;
+    border-radius: 6px;
+    margin: 0 10px 0 0;
+    height: 12px;
+    width: 12px;
+    line-height: 1.3;
+    text-align: center;
+    /*vertical-align: baseline;*/
+    font-size: 8pt;
+    transition: color 0.1s ease 0s;
+}
+input[type="radio"] + span:before{
+    content: "\2714";
+    color: @white;
+    background-color: @white;
+    display: inline-block;
+    border: none;
+    border-radius: 6px;
+    margin: 0px 10px 0 0;
+    height: 12px;
+    width: 12px;
+    line-height: 1.3;
+    text-align: center;
+    /*vertical-align: baseline;*/
+    font-size: 8pt;
+    transition: color 0.1s ease 0s;
+}
+input[type="checkbox"]:checked + label:before, input[type="radio"]:checked + label:before, input[type="radio"]:checked + span:before{
+    color: @font-color;
+}
+
+//???????????????
+
+
 main {
   height: 100%;
   width: 100%;
