--- a/app/less/_sidebar.less
+++ b/app/less/_sidebar.less
@@ -3,6 +3,14 @@
 	position: fixed;
 	width: 200px;
 
+	.tippy-box {
+		background: @main-color;
+	}
+
+	.tippy-arrow {
+		color: @main-color;
+	}
+
 	.f-container {
 		height: 100%;
 		align-content: flex-start;
