--- a/app/libscss/libs.less
+++ b/app/libscss/libs.less
@@ -1,3 +1,4 @@
 @import url('../../node_modules/normalize.css/normalize.css');
 @import url('../../node_modules/overlayscrollbars/css/OverlayScrollbars.css');
+@import url('../../node_modules/tippy.js/dist/tippy.css');
 // @import url('../../node_modules/chart.js/dist/Chart.css');
