--- a/app/pug/layouts/_popup.pug
+++ b/app/pug/layouts/_popup.pug
@@ -1,22 +1,6 @@
 .popup
 	.popup__layer
-		//- #modal-1.modal.micromodal-slide(aria-hidden='true')
-		//- 	.modal__overlay(tabindex='-1' data-micromodal-close='')
-		//- 		.modal__container(role='dialog' aria-modal='true' aria-labelledby='modal-1-title')
-		//- 			header.modal__header
-		//- 				h2#modal-1-title.modal__title
-		//- 					| Micromodal
-		//- 				button.modal__close(aria-label='Close modal' data-micromodal-close='')
-		//- 			main#modal-1-content.modal__content
-		//- 				p
-		//- 					| Try hitting the 
-		//- 					code tab
-		//- 					|	key and notice how the focus stays within the modal itself. Also, 
-		//- 					code esc
-		//- 					|	to close modal.
-		//- 			footer.modal__footer
-		//- 				button.modal__btn.modal__btn-primary Continue
-		//- 				button.modal__btn(data-micromodal-close='' aria-label='Close this dialog window') Close
+		include work-popup/_work-popup
 		#country-popup.sidebar-popup
 			form
 				.input-group
@@ -113,3 +97,21 @@
 					input(type="checkbox" id="instagram-chbx")
 					label(for="instagram-chbx")
 						|Instagram
+		#last-contact-popup.sidebar-popup
+			form
+				.input-group
+					input(type="checkbox" id="1-month-chbx")
+					label(for="1-month-chbx")
+						|более 1 мес назад
+				.input-group
+					input(type="checkbox" id="3-month-chbx")
+					label(for="3-month-chbx")
+						|более 3 мес назад
+				.input-group
+					input(type="checkbox" id="6-month-chbx") 
+					label(for="6-month-chbx")
+						|более 6 мес назад
+				.input-group
+					input(type="checkbox" id="never-chbx")
+					label(for="never-chbx")
+						|никогда
