--- a/app/less/_var.less
+++ b/app/less/_var.less
@@ -7,8 +7,16 @@
 @black: #000000;
 @light-gray: #f2f3f3;
 @dark-blue: #0028B6;
+@blue: #3399CC;
 @orange: #FF9966;
 @teal: #99CCCC;
 @green: #5ACA65;
+@light-green: #00D98B;
+@yellow: #DECD30;
+@sky-blue: #EEFDFF;
 
 
+
+@hover_main-color: #d1eaff66;
+@hover_color: #daeeff; 
+@hover_row: #dce9f6;
