--- a/app/pug/layouts/row.pug
+++ b/app/pug/layouts/row.pug
@@ -14,7 +14,7 @@
 			span.row__tags
 				i.attention-tag
 					+svg2('attention')
-				i.tag.manager-tag
+				i.tag.manager-tag.dark-blue-tag
 					|AK
 		.row__phone.row__cell
 			i
